--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body{
 }
 .s1-upper{
   display: flex;  
+  font-size: 1.2rem;
   justify-content: space-between;
   padding: 0 250px;
 }
@@ -22,6 +23,27 @@ body{
   align-items: center;  
   display: flex;
   gap: 32px;
+}
+.s1-lowwer{
+  display: flex;
+  gap: 100px;
+  padding: 100px 250px 100px;
+  font-size: 1.2rem;
+}
+.s1-img{
+  width: 600px;
+  height: 400px;
+}
+.s1-sign-up-button{
+  background-color: #3882f6;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding: 3px 18px;
+  margin-top: 15px;
+  
 }
 
 .section2{
