--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ a{
 }
 
 body{
-    font-family: sans-serif;
+    font-family: "roboto";
     margin: 0;
 }
 
@@ -78,8 +78,22 @@ body{
     font-size: 1.2rem;
 }
 
+/* section three styles */
 .section3{
-    background-color: #e5e7eb;    
+    background-color: #e5e7eb;  
+    padding: 100px 350px;  
+}
+
+.testimonial{
+    color: #1f2937;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+}
+
+.jhon{
+  float: right;
+  font-size: 30px;
 }
 
 .section4{
