--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ body{
 .illustration{
     font-size: 1.2rem;
     color: #1f2937;
+    line-height: 1.5rem;
 }
 
 /* section three styles */
@@ -90,6 +91,7 @@ body{
     font-size: 36px;
     font-style: italic;
     font-weight: 300;
+    line-height: 2.8rem;
 }
 
 .jhon{
@@ -100,6 +102,38 @@ body{
 /* section four styles */
 .section4{
 }
+.s4-container{
+    background-color: #3882f6;
+    border-radius: 10px;
+    color: #f9faf8;
+    display: flex;
+    align-items: center;
+    padding: 25px 0;
+    justify-content: center;
+    margin: 50px 300px;
+    gap: 50px;
+}
+.s4-text{
+
+}
+
+.s4-header{
+    margin-bottom: 0;
+}
+.s4-p{
+  margin-top: 5px;
+  font-size: 1.2rem;
+}
+
+.s4-sign-up-button{
+  border-radius: 5px;
+  border: 2px solid #f9faf8;
+  background-color: #3882f6;
+  color: #f9faf8;
+  padding: 2px 13px;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
 
 /* footer styles */
 .footer{
@@ -108,7 +142,7 @@ body{
   display: flex;
   font-size: 1.3rem;
   justify-content: center;
-  padding: 30px;
+  padding: 20px;
 }
 .footer-text{
 
